--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -1,10 +1,9 @@
 <div>
-  <img src="/assets/profile-pic.webp" alt="Headshot of Maxi Ferreira">
+  <img src="https://avatars.githubusercontent.com/u/142812?s=400&u=2c3a1edbded05499a6a8dbac2934b216ae9f120c&v=4" alt="Alexandru Apetrei, somewhere in Italy">
   <p>
-    Hi, I'm <strong>Maxi</strong>. I'm a software engineer and data scientist based in Los Angeles.
-    You can follow me on <a href="https://www.twitter.com/Charca" target="_blank">Twitter</a>,
-    see some of my work on <a href="https://www.github.com/Charca" target="_blank">GitHub</a>,
-    or read more about me on <a href="https://www.maxiferreira.com" target="_blank">my website</a>.
+    Salut, I'm <strong>Alex</strong>. I'm a software wisperer based in Salzburg.
+    You can follow me on <a href="https://www.x.com/urssur" target="_blank">Twitter</a>,
+    see some of public code on <a href="https://github.com/alexaapetrei" target="_blank">GitHub</a>,
   </p>
 </div>
 
